# pika-sdk

./: .gitignore  LICENSE  README.md  sdk.index.json
assets/: assets.index.json  gen_assets_index.sh  unzip_assets.sh
assets/2D/kenney_animal-pack-remastered/: License.txt
assets/2D/kenney_background-elements-remastered/: License.txt
assets/2D/kenney_flag-pack/: License.txt
assets/2D/kenney_holiday-extras/: License.txt
assets/2D/kenney_light-masks-1.0/: License.txt
assets/2D/kenney_puzzle-pack-1/: License.txt
docs/: README.md  api.md  docs.index.json  getting-started.md  guide.md  module.md  monitor.md  overview.md
examples/: examples.index.json
examples/test_audio/: manifest.json  s.json
examples/test_button/: manifest.json  s.json
examples/test_font/: manifest.json  s.json
examples/test_voice/: manifest.json  s.json
libraries/: README.md  animator.lua  fsm.lua  libs.index.json  save.lua  settings.lua  testkit.lua  ui.lua
libraries/math/: easing.lua  lerp.lua  vec2.lua
libraries/util/: str.lua  tbl.lua
lua-5.5.0/: CMakeLists.txt
pika-1.0.1/: README.md
pika-1.0.1/audio/: README.md
pika-1.0.1/examples/: README.md
pika-1.0.1/fonts/: README.md
pika-1.0.1/images/: README.md
pika-1.0.1/libs/: .complete  README.md  animator.lua  fsm.lua  s.json  save.lua  settings.lua  testkit.lua  ui.lua
pika-1.0.1/packs/: README.md
skill/: SKILL.md  api-contract.md  constraints.md  pitfalls.md  skill.index.json  start-prompt.md  workflow.md
skill/recipes/: move-a-sprite.md  play-sound-on-hit.md  settings-menu.md  voice-keyword-trigger.md
(+72 files in other folders)
